--- a/app/views/contacts/_coordinates_form.html.haml
+++ b/app/views/contacts/_coordinates_form.html.haml
@@ -4,7 +4,7 @@
   -f.field :contact, :line_3
   -f.field :contact, :line_4
   -f.field :contact, :line_5
-  -f.field Contact.human_attribute_name("line_6"), text_field_with_auto_complete(:contact, :line_6, {}, :controller=>:interfacers)
+  -f.field :contact, :line_6, "data-autocomplete"=>url_for(:action=>:autocomplete_for_area_name, :controller=>:interfacers)
   -f.field :contact, :country, :choices=>countries, :options=>{:include_blank=>true}
   -f.title :canals
   -f.field :contact, :phone
