--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -5,7 +5,7 @@
   -f.field :event, :responsible_id,   :choices=>{:reflection=>:users, :label=>:label, :order=>"last_name, first_name"}, :new=>true
   -event_nature_id = f.field :event, :nature_id, :choices=>{:reflection=>:event_natures, :label=>:name, :order=>:name}, :new=>true
   -f.field :event, :duration
-  -f.field Event.human_attribute_name("location"), text_field_with_auto_complete(:event, :location, {}, :controller=>:interfacers)
+  -f.field :event, :location, "data-autocomplete"=>url_for(:controller=>:interfacers, :action=>:autocomplete_for_event_location)
   -f.field :event, :reason, :field=>:textarea
   -f.field :event, :started_at
 
