--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,13 +5,12 @@
   %head
     %link{:rel=>"icon", :type=>"image/png", :href=>image_path("favicon.png")}
     =title_tag
-    =theme_link_tag(@current_theme)
     =javascript_include_tag :defaults
     -#=javascript_include_tag "dyke"
     -#=javascript_include_tag "list"
     =formize_include_tag
-    =javascript_include_tag "support", "ui"
-    -#=javascript_include_tag "layout"
+    =javascript_include_tag "combo_box", "support", "ui"
+    =theme_link_tag(@current_theme)
   -expiration = {}
   -expiration = {"timeout"=>session[:expiration], "timeout-href"=>renew_session_url(:name=>@current_user.name)} if @current_user and session[:expiration].to_i>0
   %body{:data=>expiration}
