--- a/app/views/sale_lines/_row_form.html.haml
+++ b/app/views/sale_lines/_row_form.html.haml
@@ -5,9 +5,7 @@
     %table.quick
       %tr
         %td=SaleLine.human_attribute_name("product")
-        %td#detail-row{:rowspan=>2}=render :partial=>"sale_lines/detail_row_form"
+        %td#detail-row{:rowspan=>2, "data-refresh"=>url_for(:controller=>:sale_lines, :action=>:detail, :sale_id=>@sale.id, :mode=>:row), "data-refresh-mode"=>"update"}=render :partial=>"sale_lines/detail_row_form"
         %td{:rowspan=>2}=submit_tag(tg(:add))
       %tr
-        %td=dyli_tag("sale_line[price_id]", :available_prices, :controller=>:interfacers)
-
-=observe_field("sale_line_price_id", :update=>"detail-row", :method=>:get, :url=>{:controller=>:sale_lines, :action=>:detail, :sale_id=>@sale.id, :mode=>:row}, :frequency => 0.25, :with=>"price_id", :loading=>"onLoading()", :loaded=>"onLoaded()")
+        %td=combo_box_tag("sale_line[price_id]", :available_prices, {:controller=>:interfacers}, "data-dependents"=>"#detail-row", "data-parameter-name"=>"price_id")
