--- a/app/views/sales/_form.html.haml
+++ b/app/views/sales/_form.html.haml
@@ -1,11 +1,10 @@
 =sales_steps
--sale_client_id = nil
 =formalize do |f| 
   -f.error 'sale'
   -f.title :client
-  -sale_client_id = f.field :sale, :client_id, :choices=>:clients, :new=>true
+  -f.field :sale, :client_id, :choices=>:clients, :new=>true, "data-parameter-name"=>"client_id", "data-dependents"=>"#contacts"
 
-#contacts{:data=>{:refresh=>url_for(:action=>:contacts)}}=render "contacts_form"
+#contacts{:data=>{"refresh"=>url_for(:action=>:contacts), "refresh-mode"=>"update"}}=render "contacts_form"
 
 =formalize do |f| 
   -f.title :sales_conditions
@@ -14,7 +13,7 @@
   -f.field :sale, :responsible_id, :choices=>{:reflection=>:employees}, :new=>{:employed=>1}
   -f.field :sale, :transporter_id, :choices=>{:reflection=>:transporters, :include_blank=>""}
   -f.field :sale, :comment, :field=>:textarea
-  -f.field :sale, :letter_format
+  -f.field :sale, :letter_format, "data-show"=>"#letter_format"
 =formalize(:id=>:letter_format) do |f|
   -f.title :letter_options
   -f.field :sale, :subject
@@ -22,9 +21,4 @@
   -f.field :sale, :introduction, :field=>:textarea
   -f.field :sale, :conclusion, :field=>:textarea
 
-:javascript
-  window.letterInformations = function(){ toggleElement('letter_format', $('sale_letter_format').checked); }
-  letterInformations();
-
-=observe_field sale_client_id, :frequency=>0.25, :update=>"contacts", :url=>{:action=>:contacts, :sale_id=>@sale.id}, :with=>:client_id, :method=>:get
-=observe_field("sale_letter_format", :frequency=>0.25, :function=>"letterInformations()")
+-#=observe_field sale_client_id, :frequency=>0.25, :update=>"contacts", :url=>{:action=>:contacts, :sale_id=>@sale.id}, :with=>:client_id, :method=>:get
