--- a/app/views/subscription_natures/_form.html.haml
+++ b/app/views/subscription_natures/_form.html.haml
@@ -1,20 +1,12 @@
 =formalize do |f|
   - f.error :subscription_nature
   -if @subscription_nature.new_record?
-    - f.field :subscription_nature, :nature, :field=>:radio, :choices=>SubscriptionNature.natures
+    - f.field :subscription_nature, :nature, :field=>:radio, :choices=>SubscriptionNature.natures.collect{|n| [n[0], n[1], {"data-show"=>"##{n[1]}_options"}]}
   -else
     - f.field @subscription_nature.class.human_attribute_name("nature"), @subscription_nature.nature_label
   - f.field :subscription_nature, :name
   - f.field :subscription_nature, :reduction_rate
   - f.field :subscription_nature, :entity_link_nature_id, :choices=>{:reflection=>:entity_link_natures, :include_blank=>true}, :new=>true
   - f.field :subscription_nature, :comment, :field=>:textarea
-=formalize(:id=>:number) do |f|
+=formalize(:id=>:quantity_options) do |f|
   - f.field :subscription_nature, :actual_number
-
-
-:javascript
-  window.displayNumber = function(){ toggleElement('number', $('subscription_nature_nature_quantity').checked); };
-  displayNumber();
-
-
-=observe_field("subscription_nature_nature_quantity", :frequency=>0.25, :function=> "displayNumber();")
