--- a/app/views/entity_link_natures/_form.html.haml
+++ b/app/views/entity_link_natures/_form.html.haml
@@ -1,15 +1,9 @@
 =formalize do |f|
-  - f.error :entity_link_nature
-  - f.field :entity_link_nature, :name
-  - f.field :entity_link_nature, :symmetric
-  - f.field :entity_link_nature, :propagate_contacts
-  - f.field :entity_link_nature, :name_1_to_2
-=formalize(:id=>"optional_field") do |f|
-  - f.field :entity_link_nature, :name_2_to_1
-
-
-:javascript
-  window.symmetric = function(){ toggleElement('optional_field', $('entity_link_nature_symmetric').checked); };
-  symmetric();
-
-=observe_field("entity_link_nature_symmetric", :frequency=>0.25, :function=>"symmetric();")
+  -f.error :entity_link_nature
+  -f.field :entity_link_nature, :name
+  -f.field :entity_link_nature, :symmetric, "data-show"=>"#reverse-name"
+  -f.field :entity_link_nature, :propagate_contacts
+  -f.field :entity_link_nature, :name_1_to_2
+#reverse-name
+  =formalize do |f|
+    -f.field :entity_link_nature, :name_2_to_1
