--- a/app/views/entity_links/_form.html.haml
+++ b/app/views/entity_links/_form.html.haml
@@ -1,24 +1,13 @@
--e1, e2 = 0, 0
-=formalize do |f|
-  -f.error :entity_link
-  -e1 = f.field :entity_link, :entity_1_id, :choices=>:entities, :new=>true
-  -f.field :entity_link, :nature_id,  :choices=>{:reflection=>:entity_link_natures, :label=>:name_1_to_2}, :new=>true
-  -e2 = f.field :entity_link, :entity_2_id, :choices=>:entities, :new=>true
-  -f.field :entity_link, :comment, :field=>:textarea
-=toolbar do |t|
-  - t.javascript :permute, "permuteEntities('#{e1}', '#{e2}')"
-:javascript
-  window.permuteEntities = function(e1_hf, e2_hf) {
-    e1_hf=$(e1_hf); e2_hf=$(e2_hf); 
-    var e1_tf = $(e1_hf.readAttribute('text_field_id'));
-    var e2_tf = $(e2_hf.readAttribute('text_field_id'));
-    var hf_value=e2_hf.value; 
-    var tf_value=e2_tf.value; 
-    var tf_size =e2_tf.readAttribute('size'); 
-    e2_hf.value = e1_hf.value;
-    e2_tf.value = e1_tf.value;
-    e2_tf.writeAttribute('size', e1_tf.readAttribute('size'));
-    e1_hf.value = hf_value;
-    e1_tf.value = tf_value;
-    e1_tf.writeAttribute('size',  tf_size);
-  }
+%table.flex.center
+  %tr
+    %td
+      %label=EntityLink.human_attribute_name("entity_1_id")
+      =combo_box(:entity_link, :entity_1_id, :entities, :controller=>:interfacers)
+    %td=select(:entity_link, :nature_id, @current_company.entity_link_natures.collect{|n| [n.name_1_to_2, n.id]})
+    %td
+      %label=EntityLink.human_attribute_name("entity_2_id")
+      =combo_box(:entity_link, :entity_2_id, :entities, :controller=>:interfacers)
+  %tr
+    %td
+    %td=link_to(tl(:permute), "#", "data-permute-combo-box"=>"#entity_link_entity_1_id, #entity_link_entity_2_id")
+    %td
