--- a/app/views/cashes/_form.html.haml
+++ b/app/views/cashes/_form.html.haml
@@ -7,40 +7,29 @@
   -f.field :cash, :name
   -f.field :cash, :currency_id, :choices=>{:reflection=>:currencies}
   -if @cash.new_record? 
-    -f.field :cash, :nature, :choices=>Cash.natures, :field=>:radio
+    -f.field :cash, :nature, :field=>:radio, :choices=>Cash.natures.collect{|n| [n[0], n[1], {"data-show"=>"##{n[1]}_options", "data-dependents"=>"#cash-accountancy", "data-parameter-name"=>"nature"}]}
   -else
     -f.field :cash, :nature_label, :field=>:label
 
 -if @cash.new_record? or @cash.bank_account?
-  #bank_account
+  #bank_account_options
     =formalize do |f|
       -f.title @cash.nature_label
       -f.field :cash, :bank_name
       -f.field :cash, :address, :field=>:textarea
-      -f.field :cash, :mode, :field=>:radio, :choices=>Cash.modes  
-    =formalize(:id=>:bban) do |f|
+      -f.field :cash, :mode, :field=>:radio, :choices=>Cash.modes.collect{|m| [m[0], m[1], "data-show"=>"##{m[1]}_options"]} 
+    =formalize(:id=>:bban_options) do |f|
       -f.field :cash, :bank_code, :size=>10
       -f.field :cash, :agency_code, :size=>10
       -f.field :cash, :number
       -f.field :cash, :key, :size=>4
-    =formalize(:id=>:iban) do |f|  
+    =formalize(:id=>:iban_options) do |f|  
       -f.field :cash, :iban, :size=>48
       -f.field :cash, :bic
-  :javascript
-    window.toggleBAN = function() { toggleElement('iban', $('cash_mode_iban').checked, 'bban'); }
-    toggleBAN();
-  =observe_field "cash_mode_iban", :frequency => 0.25, :function =>"toggleBAN()"
 
 -if @cash.new_record? or !@cash.bank_account?
-  #cash_box
+  #cash_box_options
 
-#cash_accountancy=render :partial=>'accountancy_form'
-
--if @cash.new_record? 
-  :javascript
-    window.toggleCash = function() { toggleElement('bank_account', $('cash_nature_bank_account').checked, 'cash_box'); }
-    toggleCash();
-  =observe_field "cash_nature_bank_account", :frequency => 0.25, :function =>"toggleCash()"
-  =observe_field "cash_nature_bank_account", :frequency => 0.25, :update=>:cash_accountancy, :url=>{:controller=>:cashes, :action=>:new, :mode=>:accountancy}, :with=>"'nature='+(this.checked ? 'bank_account' : 'cash_box')", :loading=>"onLoading()", :loaded=>"onLoaded()", :method=>:get
+#cash-accountancy{"data-refresh"=>url_for(:controller=>:cashes, :action=>:new, :mode=>:accountancy), "data-refresh-mode"=>"update"}=render :partial=>"accountancy_form"
 
 
