--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -1,12 +1,9 @@
--event_nature_id = nil
 =formalize do |f|
   -f.error :event
   -f.field :event, :entity_id, :choices=>:entities, :new=>true
   -f.field :event, :responsible_id,   :choices=>{:reflection=>:users, :label=>:label, :order=>"last_name, first_name"}, :new=>true
-  -event_nature_id = f.field :event, :nature_id, :choices=>{:reflection=>:event_natures, :label=>:name, :order=>:name}, :new=>true
-  -f.field :event, :duration
+  -f.field :event, :nature_id, :choices=>{:reflection=>:event_natures, :label=>:name, :order=>:name}, :new=>true, "data-dependents"=>"#event_duration", "data-parameter-name"=>"nature_id"
+  -f.field :event, :duration, "data-refresh"=>url_for(:action=>:change_minutes, :field=>:duration), "data-refresh-mode"=>"update-value"
   -f.field :event, :location, "data-autocomplete"=>url_for(:controller=>:interfacers, :action=>:autocomplete_for_event_location)
   -f.field :event, :reason, :field=>:textarea
   -f.field :event, :started_at
-
-=observe_field(event_nature_id, :url=>{:action=>:change_minutes}, :frequency=>0.25, :with=>"nature_id", :method=>:get)
