--- a/app/views/incoming_deliveries/_form.html.haml
+++ b/app/views/incoming_deliveries/_form.html.haml
@@ -7,6 +7,7 @@
   -f.field :incoming_delivery, :mode_id, :choices=>{:reflection=>:incoming_delivery_modes}, :new=>true
   -f.field :incoming_delivery, :planned_on
 
+
 %h2=IncomingDelivery.human_attribute_name("lines")
 %table.list 
   %tr
@@ -27,24 +28,11 @@
       %td.dec=line.purchase_line.quantity
       %td=line.purchase_line.unit.label
       %td.dec=line.purchase_line.undelivered_quantity
-      %td=text_field_tag "incoming_delivery_line[#{line.purchase_line_id}][quantity]", line.quantity, :id=>"incoming_delivery_line_#{line.purchase_line_id}_quantity", :onkeyup=>"t6(this, #{line.purchase_line.undelivered_quantity});", :class=>"pta-#{line.purchase_line_id} awt-#{line.purchase_line_id}"
-      %td.dec.pta{"mul-of"=>"pta-#{line.purchase_line_id}"}
-      %td.dec.awt{"mul-of"=>"awt-#{line.purchase_line_id}"}
+      %td=text_field_tag "incoming_delivery_line[#{line.purchase_line_id}][quantity]", line.quantity, :id=>"incoming_delivery_line_#{line.purchase_line_id}_quantity", :class=>"pta-#{line.purchase_line_id} awt-#{line.purchase_line_id}", "data-less-than-or-equal-to"=>line.quantity+line.purchase_line.undelivered_quantity 
+      %td.dec.pta{"data-use"=>".pta-#{line.purchase_line_id}", "data-calculate"=>"mul"}
+      %td.dec.awt{"data-use"=>".awt-#{line.purchase_line_id}", "data-calculate"=>"mul"}
   %tr.total
     %th{:colspan=>7}=tg :total
-    %td#total_pretax_amount{"sum-of"=>"pta"}=@incoming_delivery.pretax_amount
-    %td#total_amount{"sum-of"=>"awt"}=@incoming_delivery.amount
-  :javascript
-    window.t6 = function(element, max) {
-      compute("total_pretax_amount");
-      compute("total_amount");
-      if (element !== null) {
-        if (isNaN(element.value) || (!isNaN(element.value) && parseFloat(element.value)>max)) {
-          element.addClassName("invalid");
-        } else {
-          element.removeClassName("invalid");
-        }
-      }
-    }
-    t6();
+    %td#total_pretax_amount{"data-use"=>".pta"}=@incoming_delivery.pretax_amount
+    %td#total_amount{"data-use"=>".awt"}=@incoming_delivery.amount
 
