--- a/app/views/journal_entry_lines/_row_form.html.haml
+++ b/app/views/journal_entry_lines/_row_form.html.haml
@@ -1,13 +1,17 @@
 -line = row_form||{}
--id='e'+Time.now.to_i.to_s(36)+rand.to_s[2..-1].to_i.to_s(36)
+-@@line_count = 0 if !defined?(@@line_count)
+-id = 'e'+@@line_count.to_s(36)
+-@@line_count += 1
 -if line.errors.size > 0
-  %tr{:id=>id+'-errors'}
-    %td{:colspan=>5, :style=>"background: transparent; padding:8px 4px 0; border-left:none; border-right:none;"}=error_messages(line)
+  %tr.inline-errors{:id=>id+'-errors'}
+    %td{:colspan=>5}=error_messages(line)
 %tr{:id=>id}
-  %td
-    =text_field_tag("lines[#{id}][name]", line.name, :id=>"lines_#{id}_name")
-    =javascript_tag("$('lines_#{id}_name').focus();")
-  %td=dyli_tag "lines[#{id}][account_id]", "account", :controller=>:interfacers, :value=>line.account, :no_resize=>true # , :after_update_element=>after_update
-  %td=text_field_tag "lines[#{id}][currency_debit]", (line.currency_debit||0.0), :size=>10, :id=>"lines_#{id}_currency_debit", :class=>"debit", :onkeyup=>"t0();", :onblur=>"if (isNaN(this.value)) {return false;}; if (this.value!=0 && !balanced) {"+remote_function(:url=>{:controller=>:journal_entry_lines, :action=>:new}, :method=>:get, :update=>:lines, :position=>:bottom)+";}; return false;"
-  %td=text_field_tag "lines[#{id}][currency_credit]", (line.currency_credit||0.0), :size=>10, :class=>"credit", :onkeyup=>"t0();", :onblur=>"if (isNaN(this.value)) {return false;}; if (this.value!=0 && !balanced) {"+remote_function(:url=>{:controller=>:journal_entry_lines, :action=>:new}, :method=>:get, :update=>:lines, :position=>:bottom)+";}; return false;"
-  %td.act=link_to_function(image_tag(theme_button(:destroy), :border=>0), "$('#{id}').remove(); t0(); $('#{id}-errors').remove();")
+  %td=text_field_tag("lines[#{id}][name]", line.name, :id=>"lines_#{id}_name", "data-autofocus"=>"true", "data-parameter-name"=>"name")
+  %td=combo_box_tag "lines[#{id}][account_id]", :account, :controller=>:interfacers, :value=>line.account
+  %td=text_field_tag "lines[#{id}][currency_debit]", (line.currency_debit||0.0), :size=>10, :id=>"lines_#{id}_currency_debit", :class=>"debit", :href=>url_for(:controller=>:journal_entry_lines, :action=>:new), "data-update"=>"lines", "data-update-at"=>:bottom, "data-type"=>:html, "data-add-line-unless"=>"#total", "data-with"=>"#lines_#{id}_name,#entry-debit,#entry-credit"
+
+  -#, :onkeyup=>"t0();", :onblur=>"if (isNaN(this.value)) {return false;}; if (this.value!=0 && !balanced) {"+remote_function(:url=>{:controller=>:journal_entry_lines, :action=>:new}, :method=>:get, :update=>:lines, :position=>:bottom)+";}; return false;"
+
+  %td=text_field_tag "lines[#{id}][currency_credit]", (line.currency_credit||0.0), :size=>10, :class=>"credit"
+  -#, :onkeyup=>"t0();", :onblur=>"if (isNaN(this.value)) {return false;}; if (this.value!=0 && !balanced) {"+remote_function(:url=>{:controller=>:journal_entry_lines, :action=>:new}, :method=>:get, :update=>:lines, :position=>:bottom)+";}; return false;"
+  %td.act=link_to(image_tag(theme_button(:destroy), :border=>0), "#", "data-remove"=>"##{id}, ##{id}-errors")
